# nbufe_final_online_exam

./: .gitignore  exam_db.sql  exam_template.sql  question_template.sql  stream.py
API_Server/: pom.xml
Examer_Client/: App.xaml  App.xaml.cs  Examer_Client.csproj  Examer_Client.sln  MainWindow.xaml  MainWindow.xaml.cs  packages.config
Examer_Client/Objects/: Objects.cs
Examer_Client/Pages/: FillBlankAnswerArea.xaml  FillBlankAnswerArea.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  QuestionPage.xaml  QuestionPage.xaml.cs  SelectAnswerArea.xaml  SelectAnswerArea.xaml.cs  SimpleAnswerArea.xaml  SimpleAnswerArea.xaml.cs
Examer_Client/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Examer_Client/Utils/: Feature.cs  HttpHelper.cs  System.cs
LogServer/: pom.xml
Mappers/: pom.xml
Utils_Pojos/: pom.xml
feature_demo/Qt_demo/: CMakeLists.txt  ffmpegdecoder.cpp  ffmpegdecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
feature_demo/maven_demo_sqlite/: database.db  pom.xml
feature_demo/vue_demo/: package-lock.json  package.json  vue.config.js
feature_demo/vue_demo/src/: App.vue  main.js
feature_demo/vue_markdown_demo/: package-lock.json  package.json
feature_demo/vue_markdown_demo/public/: test.md
feature_demo/vue_markdown_demo/src/: main.js
front_admin/: package-lock.json  package.json
front_admin/src/: App.vue  main.js  permission.js  settings.js
front_admin/src/api/: ai.js  answer.js  client.js  exam.js  log.js  question.js  resource.js  tag.js  user.js
front_admin/src/router/: index.js
(+242 files in other folders)
